--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,6 +1,6 @@
 site:
   title: Tremorsys home
-  start_page: index.adoc
+  start_page: homesite::index.adoc
   url: https://tremorsys.com
 content:
   sources:
