--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,6 +1,7 @@
 site:
   title: Tremorsys home
   start_page: homesite::index.adoc
+  url: https://tremorscript.github.io/tremorsyshome
 content:
   sources:
   - url: .
