made changes to the UI

--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -16,8 +16,9 @@ content:
     start_path: docs
 ui:
   bundle:
-    url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/HEAD/raw/build/ui-bundle.zip?job=bundle-stable
-    snapshot: true
+    # url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/HEAD/raw/build/ui-bundle.zip?job=bundle-stable
+    url: ./ui-bundle.zip
+    # snapshot: true
   supplemental_files:
   - path: ui.yml
     contents: |
